testsuite/tests/unsatisfiable/T23816.stderr
T23816: Uncaught exception ghc-internal:GHC.Internal.Control.Exception.Base.TypeError:

T23816.hs:18:15: error: [GHC-22250]
    • Msg
    • In the first argument of ‘print’, namely ‘(meth1 'x')’
      In the expression: print (meth1 'x')
      In an equation for ‘main’: main = print (meth1 'x')
(deferred type error)

HasCallStack backtrace:
  collectBacktraces, called at libraries/ghc-internal/src/GHC/Internal/Exception.hs:92:13 in ghc-internal:GHC.Internal.Exception
  toExceptionWithBacktrace, called at libraries/ghc-internal/src/GHC/Internal/Exception.hs:84:32 in ghc-internal:GHC.Internal.Exception
  throw, called at libraries/ghc-internal/src/GHC/Internal/Control/Exception/Base.hs:423:30 in ghc-internal:GHC.Internal.Control.Exception.Base

